[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [{name="Brian Kyle reicher", email= "reicher.b@northeastern.edu"}]
name = "rusty_mws"
version = "0.1.0"
description = "An optimized Rust-based mutex watershed"
readme = "README.md"

requires-python = ">=3.6"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    "License :: OSI Approved :: Apache Software License",
    'Natural Language :: English',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]


[project.optional-dependencies]
dev = [
    "numpy",
    "pymongo",
    "scikit-image",
    "logging"
]